--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -30,9 +30,20 @@ permissions:
   pull-requests: 'write'
 
 jobs:
-  plan:
+  plan_ci:
     uses: './.github/workflows/plan.yml' # ratchet:exclude
     with:
+      working_directory: 'test/ci'
       wif_provider: '${{ vars.GUARDIAN_WIF_PROVIDER}}'
       wif_service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
       guardian_bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
+      guardian_terraform_version: '1.3.6'
+
+  plan_projects:
+    uses: './.github/workflows/plan.yml' # ratchet:exclude
+    with:
+      working_directory: 'test/projects'
+      wif_provider: '${{ vars.GUARDIAN_WIF_PROVIDER}}'
+      wif_service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
+      guardian_bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
+      guardian_terraform_version: '1.3.6'
