--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -21,12 +21,12 @@ on:
         description: 'COMMAND - The Terraform command to run including any arguments (this value is appended to the terraform command).'
         required: true
         type: string
-      directories:
-        description: 'DIRECTORIES - The Terraform directories to execute the command in. If left blank, the command will run for all directories in .guardian'
-        type: string
       number:
         description: 'PR NUMBER - The Pull Request number to run the actions for (if blank, this runs for the default branch).'
         type: string
+      working_directory:
+        type: string
+        default: '.'
       wif_provider:
         required: true
         type: string
@@ -45,18 +45,11 @@ on:
         required: false
         default: 60
         type: number
-      guardian_bucket_name:
-        required: true
-        type: string
-      guardian_terraform_version:
-        required: false
-        default: '1.1.8'
-        type: string
     secrets:
-      gh_token:
+      workflow_github_token:
         required: false
 
-# only one workflow can run to allow for terraform state locking
+# only one admin script should run at a time
 concurrency:
   group: '${{ github.workflow_ref }}'
 
@@ -69,13 +62,20 @@ env:
   GUARDIAN_BUCKET_NAME: ${{ inputs.guardian_bucket_name }}
   GUARDIAN_TERRAFORM_VERSION: ${{ inputs.guardian_terraform_version }}
   GUARDIAN_LOCK_FILENAME: 'guardian-locks/${{ github.repository }}/${{ github.repository_id }}.tflock'
+  GITHUB_TOKEN: ${{ secrets.workflow_github_token || github.token }}
   TF_IN_AUTOMATION: true # tell terraform this is an automated workflow https://developer.hashicorp.com/terraform/tutorials/automation/automate-terraform#controlling-terraform-output-in-automation
 
 jobs:
-  admin_access:
+  admin:
     runs-on: 'ubuntu-latest'
     permissions:
       contents: 'read'
+      id-token: 'write'
+      pull-requests: 'read'
+    defaults:
+      run:
+        shell: 'bash'
+        working-directory: '${{ inputs.working_directory }}'
     steps:
       - name: 'Validate Branch'
         if: ${{ github.ref_name != github.event.repository.default_branch }}
@@ -84,8 +84,6 @@ jobs:
           exit 1
 
       - name: 'Permission'
-        env:
-          GH_TOKEN: ${{ github.token }}
         run: |-
           ROLE=$(gh api -H "Accept: application/vnd.github+json" /repos/${{ github.repository }}/collaborators/${{ github.triggering_actor }}/permission | jq .role_name -r)
           if [ "$ROLE" != "admin" ]; then
@@ -93,73 +91,11 @@ jobs:
             exit 1
           fi
 
-  admin_init:
-    needs:
-      - 'admin_access'
-    runs-on: 'ubuntu-latest'
-    permissions:
-      contents: 'read'
-      pull-requests: 'read'
-    outputs:
-      dirs: ${{ steps.set-matrix.outputs.dirs }}
-    steps:
-      - name: 'Validate Branch'
-        if: ${{ github.ref_name != github.event.repository.default_branch }}
-        run: |-
-          echo "::error ::Guardian Admin can only be run from the default branch (${{ github.event.repository.default_branch }})."
-          exit 1
-
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
 
       - name: 'Checkout PR'
         if: ${{ inputs.number != '' }}
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: |-
-          gh pr checkout ${{ inputs.number }}
-
-      - name: 'Set Matrix'
-        id: 'set-matrix'
-        run: |-
-          if [ "${{ inputs.directories }}" != "" ]; then
-            DIRS=$(echo "${{ inputs.directories }}" | jq -Rr 'split(",") | tostring')
-            echo "dirs=${DIRS}" >> $GITHUB_OUTPUT
-          else
-            DIRS=$(touch .guardian | cat .guardian | jq -nRrc '[inputs|split("\n")] | flatten | tostring' )
-            echo "dirs=${DIRS}" >> $GITHUB_OUTPUT
-          fi
-
-  admin:
-    needs:
-      - 'admin_access'
-      - 'admin_init'
-    runs-on: 'ubuntu-latest'
-    permissions:
-      contents: 'read'
-      id-token: 'write'
-      pull-requests: 'read'
-    strategy:
-      fail-fast: false
-      matrix:
-        dir: ${{ fromJSON(needs.admin_init.outputs.dirs) }}
-    env:
-      GUARDIAN_WORKING_DIRECTORY: '${{ matrix.dir }}'
-      GITHUB_TOKEN: ${{ secrets.gh_token || github.token }}
-    steps:
-      - name: 'Validate Branch'
-        if: ${{ github.ref_name != github.event.repository.default_branch }}
-        run: |-
-          echo "::error ::Guardian Admin can only be run from the default branch (${{ github.event.repository.default_branch }})."
-          exit 1
-
-      - name: 'Checkout'
-        uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
-
-      - name: 'Checkout PR'
-        if: ${{ inputs.number != '' }}
-        env:
-          GH_TOKEN: ${{ github.token }}
         run: |-
           gh pr checkout ${{ inputs.number }}
 
