--- a/.github/workflows/test-apply.yml
+++ b/.github/workflows/test-apply.yml
@@ -28,9 +28,20 @@ permissions:
   pull-requests: 'write'
 
 jobs:
-  apply:
+  apply_ci:
     uses: './.github/workflows/apply.yml' # ratchet:exclude
     with:
+      working_directory: 'test/ci'
       wif_provider: '${{ vars.GUARDIAN_WIF_PROVIDER}}'
       wif_service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
       guardian_bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
+      guardian_terraform_version: '1.3.6'
+
+  apply_projects:
+    uses: './.github/workflows/apply.yml' # ratchet:exclude
+    with:
+      working_directory: 'test/projects'
+      wif_provider: '${{ vars.GUARDIAN_WIF_PROVIDER}}'
+      wif_service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
+      guardian_bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
+      guardian_terraform_version: '1.3.6'
