--- a/examples/guardian-apply.yml
+++ b/examples/guardian-apply.yml
@@ -34,10 +34,8 @@ jobs:
       wif_provider: '${{ vars.GUARDIAN_WIF_PROVIDER}}'
       wif_service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
       guardian_bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
-
-      # Optional: only needed if a specific terraform version is required
-      # guardian_terraform_version: '1.3.8'
+      guardian_terraform_version: '1.3.6'
 
     # Optional: GitHub token if needed using terraform github provider a custom PAT may be required depending on your use case
     # secrets:
-    #   gh_token: '${{ secrets.GITHUB_TOKEN }}'
+    #   workflow_github_token: '${{ secrets.GITHUB_TOKEN }}'
