--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -79,6 +79,9 @@ jobs:
         shell: 'bash'
         working-directory: '${{ inputs.working_directory }}'
     steps:
+      - name: 'Checkout'
+        uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
+
       - name: 'Validate Branch'
         if: ${{ github.ref_name != github.event.repository.default_branch }}
         run: |-
